# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//ark/js_runtime/test/test_helper.gni")

host_moduletest_action("container_arraylist") {
  deps = []
}

host_moduletest_action("container_treemap") {
  deps = []
}

host_moduletest_action("container_treeset") {
  deps = []
}

host_moduletest_action("container_vector") {
  deps = []
}

host_moduletest_action("container_list") {
  deps = []
}

host_moduletest_action("container_linked_list") {
  deps = []
}

host_moduletest_action("container") {
  extra_modules = [
    "container_arraylist",
    "container_linked_list",
    "container_list",
    "container_treemap",
    "container_treeset",
    "container_vector",
  ]
  deps = [
    ":gen_container_arraylist_abc",
    ":gen_container_linked_list_abc",
    ":gen_container_list_abc",
    ":gen_container_treemap_abc",
    ":gen_container_treeset_abc",
    ":gen_container_vector_abc",
  ]
}
