# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//ark/js_runtime/test/test_helper.gni")

host_moduletest_action("second_module") {
  deps = []
}

host_moduletest_action("third_module") {
  deps = []
}

host_moduletest_action("helloworld") {
  extra_modules = [
    "second_module",
    "third_module",
  ]
  deps = [
    ":gen_second_module_abc",
    ":gen_third_module_abc",
  ]
}
